--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 
 
 /* Custom default button */
-.btn-light,
-.btn-light:hover,
-.btn-light:focus {
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
 }
@@ -23,28 +23,34 @@ body {
 
 
 
-
 /*
  * Header
  */
-.banner-wrap {
-  background: url("assests/bgimage.jpg");
-  background-size: cover;
-  background-position: center;
-  color: white;
-  position: relative;
-  z-index: 1;
-}
-.overlay {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: black;
-  opacity: 50%;
-  z-index: -1;
-}
+
+ .banner-wrap {
+    /* feel free to use your own img  */
+     background-image: url(./assets/banner.webp);
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: center;
+     position: relative;
+     z-index: 1;
+ }
+ .overlay {
+     z-index: -1;
+     height: 100%;
+     width: 100%;
+     background: black;
+     opacity: 60%;
+     position: absolute;
+     top: 0;
+ }
+
 .nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
   color: rgba(255, 255, 255, .5);
+  background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
