--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
 /*
  * Globals
  */
-
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
+ * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 
@@ -17,8 +13,7 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  
 }
 
 
@@ -66,4 +61,10 @@ body {
 .nav-masthead .active {
   color: #fff;
   border-bottom-color: #fff;
+}
+
+.scrolling {
+  background: black;
+  opacity: 80%;
+  transition: all 0.5s;
 }
