--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  * Globals
  */
 
- * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -18,7 +18,7 @@
 
 .banner-wrap {
   /* feel free to use your own img  */
-  background-image: url(https://images.unsplash.com/photo-1649879682362-eb6e442f4a50?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80);
+  background-image: url(assets/banner.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
